# habit_tracker

./: .coverage  .env.simple  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.githab/workflows/: cd_pull_request.yml  ci_push.yml
.github/workflows/: cd_pull_request.yml  ci_push.yml
config/: celery.py  settings.py  urls.py
habit_tracker/: external_api_telegram.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit_tracker/management/commands/: runtelegrambot.py
habit_tracker/migrations/: 0001_initial.py  0002_rename_time_to_complete_habit_process_time_and_more.py
nginx/: nginx.conf
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_id_chat_telegram_bot.py
