[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["Julia Bengert <yubengert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"
drf-spectacular = "^0.28.0"
pytelegrambotapi = "^4.26.0"
redis = "^5.2.1"
celery = "^5.4.0"
gevent = "^24.11.1"
django-celery-beat = "^2.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"
coverage = "^7.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
